[gd_scene load_steps=6 format=3 uid="uid://ckqcoemteyvnb"]

[ext_resource type="PackedScene" uid="uid://ij80ps8ylook" path="res://src/mouse_camera.tscn" id="1_3ng5v"]
[ext_resource type="Script" path="res://src/day_16/day_16.gd" id="1_gvq3r"]
[ext_resource type="Texture2D" uid="uid://c1oihdua0xyj8" path="res://src/day_16/tilemap.svg" id="3_5dlk5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5xr1q"]
texture = ExtResource("3_5dlk5")
texture_region_size = Vector2i(128, 128)
0:0/next_alternative_id = 3
0:0/0 = 0
0:0/1 = 1
0:0/1/transpose = true
1:0/next_alternative_id = 3
1:0/0 = 0
1:0/1 = 1
1:0/1/transpose = true
2:0/next_alternative_id = 4
2:0/0 = 0
2:0/1 = 1
2:0/1/flip_v = true
2:0/2 = 2
2:0/2/transpose = true
2:0/3 = 3
2:0/3/flip_h = true
0:1/next_alternative_id = 3
0:1/0 = 0
0:1/1 = 1
0:1/1/flip_h = true
1:1/0 = 0
2:1/next_alternative_id = 4
2:1/0 = 0
2:1/1 = 1
2:1/1/flip_h = true
2:1/2 = 2
2:1/2/transpose = true
2:1/3 = 3
2:1/3/flip_v = true
2:1/3/transpose = true

[sub_resource type="TileSet" id="TileSet_58n7l"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_5xr1q")

[node name="Day16" type="Node2D"]
script = ExtResource("1_gvq3r")

[node name="MouseCamera" parent="." instance=ExtResource("1_3ng5v")]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_58n7l")
format = 2
layer_0/name = "Mirrors"
layer_1/name = "Light"
layer_1/tile_data = PackedInt32Array()

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load:"

[node name="LoadTestInputButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "test_input.txt"

[node name="LoadRealInputButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "input.txt"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="ShineLightButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Let There Be Light"

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Energized Cells:"

[node name="EnergizedCellsCountLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Not Yet Calculated"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/LoadTestInputButton" to="." method="load_and_repopulate_tilemap" binds= ["res://src/day_16/test_input.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/LoadRealInputButton" to="." method="load_and_repopulate_tilemap" binds= ["res://src/day_16/input.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer2/ShineLightButton" to="." method="shine_light"]
